langtools/test/tools/javac/annotations/6881115/T6881115.out
T6881115.java:10:30: compiler.err.duplicate.annotation.member.value: b2, B
T6881115.java:10:19: compiler.err.annotation.missing.default.value: B, b1
T6881115.java:11:26: compiler.err.annotation.missing.default.value.1: B, b1,b2
T6881115.java:11:43: compiler.err.duplicate.annotation.member.value: b2, B
T6881115.java:11:32: compiler.err.annotation.missing.default.value: B, b1
5 errors
